<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic-Tac-Toe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Player_1_Turn">Player 1:Your Turn</string>
    <string name="Player_2_Turn">Player 2:Your Turn</string>
    <string name="Player_1_Wins">Player 1 Wins</string>
    <string name="Player_2_Wins">Player 2 Wins</string>
    <string name="It_is_a_Tie">It is a tie</string>
    <string name="Player_1_Tally">Player 1:</string>
    <string name="Player_2_Tally">Player 2:</string>
    <string name="OneOne">11</string>
    <string name="OneTwo">12</string>
    <string name="OneThree">13</string>
    <string name="TwoOne">21</string>
    <string name="TwoTwo">22</string>
    <string name="TwoThree">23</string>
    <string name="ThreeOne">31</string>
    <string name="ThreeTwo">32</string>
    <string name="ThreeThree">33</string>
    <string name="Information">Info</string>
    <string name="New_Game">New Game</string>
    <string name="Exit_Game">Exit Game</string>

</resources>
