<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.example.tic_tac_toe"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/Play_Area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/OneOne"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/OneOne"
                android:textSize="50sp" />

            <Button
                android:id="@+id/OneTwo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/OneTwo"
                android:textSize="50sp" />

            <Button
                android:id="@+id/OneThree"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/OneThree"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/TwoOne"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/TwoOne"
                android:textSize="50sp" />

            <Button
                android:id="@+id/TwoTwo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/TwoTwo"
                android:textSize="50sp" />

            <Button
                android:id="@+id/TwoThree"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/TwoThree"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/ThreeOne"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/ThreeOne"
                android:textSize="50sp" />

            <Button
                android:id="@+id/ThreeTwo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/ThreeTwo"
                android:textSize="50sp" />

            <Button
                android:id="@+id/ThreeThree"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/ThreeThree"
                android:textSize="50sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/Information"
        android:textSize="30sp" />

    <Button
        android:id="@+id/New_Game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:textSize="30sp"
        android:text="@string/New_Game" />

</LinearLayout>